// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashScope request boundary > chat-like (qwen-image-edit) → messages[] with inlined image: satisfies the wire contract and matches snapshot 1`] = `
{
  "input": {
    "messages": [
      {
        "content": [
          {
            "text": "a fox",
          },
          {
            "image": "data:image/png;base64,AQID",
          },
        ],
        "role": "user",
      },
    ],
  },
  "model": "qwen-image-edit",
}
`;

exports[`DashScope request boundary > qwen-mt-image → input.image_url + source/target lang (no prompt): satisfies the wire contract and matches snapshot 1`] = `
{
  "input": {
    "image_url": "data:image/png;base64,BAUG",
    "source_lang": "auto",
    "target_lang": "en",
  },
  "model": "qwen-mt-image",
}
`;

exports[`DashScope request boundary > text2image (qwen-image) → input.prompt + parameters.size/seed: satisfies the wire contract and matches snapshot 1`] = `
{
  "input": {
    "prompt": "a fox",
  },
  "model": "qwen-image",
  "parameters": {
    "seed": 42,
    "size": "1024*1024",
  },
}
`;

exports[`DashScope request boundary > wan2.5-i2i → input.images[]: satisfies the wire contract and matches snapshot 1`] = `
{
  "input": {
    "images": [
      "data:image/png;base64,AQ==",
      "data:image/jpeg;base64,Ag==",
    ],
    "prompt": "a fox",
  },
  "model": "wan2.5-i2i-preview",
  "parameters": {
    "size": "1024*1024",
  },
}
`;

exports[`DashScope request boundary > wanx-v1 → input.ref_image + parameters.style/ref_*: satisfies the wire contract and matches snapshot 1`] = `
{
  "input": {
    "prompt": "a fox",
    "ref_image": "data:image/png;base64,CQ==",
  },
  "model": "wanx-v1",
  "parameters": {
    "ref_mode": "repaint",
    "ref_strength": 0.5,
    "seed": 7,
    "size": "1024*1024",
    "style": "<photography>",
  },
}
`;

exports[`DashScope request boundary > wanx2.1-imageedit → input.function + base_image_url + parameters: satisfies the wire contract and matches snapshot 1`] = `
{
  "input": {
    "base_image_url": "data:image/png;base64,Bwg=",
    "function": "super_resolution",
    "prompt": "a fox",
  },
  "model": "wanx2.1-imageedit",
  "parameters": {
    "seed": 3,
    "upscale_factor": 2,
    "watermark": true,
  },
}
`;
